# weighted-code-coverage

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml  wcc.yml  weighted-code-coverage.yml
data/: data.json  simple_main.rs
data/seahorse/: covdir.json  seahorse.json
data/test_project/: test.csv  test.json  test_fun.csv  test_fun.json
src/: coveralls.json  crap.rs  error.rs  files.rs  functions.rs  lib.rs  main.rs  output.rs  sifis.rs  skunk.rs  utility.rs
src/metrics/: crap.rs  mod.rs  sifis.rs  skunk.rs
test/: test.json  test.rs
