[package]
name = "weighted-code-coverage"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-code-analysis="=0.0.24"
serde_json ="=1.0.78"
serde = "=1.0.136"
thiserror= "=1.0.24"
clap = { version = "=3.1.2", features = ["derive"] }
csv = "=1.1.6"
