[package]
name = "weighted-code-coverage"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-code-analysis="=0.0.24"
serde_json = {version ="=1.0.78", features = ["preserve_order"]}
serde = "=1.0.136"
thiserror= "=1.0.24"
arg_enum_proc_macro = "=0.3"
clap = { version = "=3.1.2", features = ["derive"] }
csv = "=1.1.6"
crossbeam = "=0.8.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = "debuginfo"